k8s/platform/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: grpc-services
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "grpc-services/grpc-client-tls"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user.v1.UserService
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 50051
      - path: /order.v1.OrderService
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 50052
